logs/nonobvious.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concon-2.0.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/nonobvious'...
Listing './lib/python3.5/site-packages/nonobvious-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/valideer'...
Listing './lib/python3.5/site-packages/valideer/tests'...
Compiling './lib/python3.5/site-packages/valideer/tests/test_validators.py'...
***   File "./lib/python3.5/site-packages/valideer/tests/test_validators.py", line 115
    valid=[[], [1, 2.1, 3L], (1, 4L, 6)],
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/valideer/validators.py'...
***   File "./lib/python3.5/site-packages/valideer/validators.py", line 246
    except self._traps, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/valideer-0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
